# unicode-blocks

./: Cargo.toml  LICENSE  README.md  gen-blocks.awk
.github/workflows/: ci.yml
src/: lib.rs  unicode_block.rs  unicode_blocks.rs
tests/: cjk.rs
