[package]
name = "yeslogic-unicode-blocks"
version = "0.1.9"
authors = [
    "Magic Len <len@magiclen.org>",
    "YesLogic Pty. Ltd. <info@yeslogic.com>",
]
edition = "2021"
rust-version = "1.56"
repository = "https://github.com/yeslogic/unicode-blocks"
keywords = ["unicode", "blocks", "character", "cjk"]
categories = ["no-std", "text-processing"]
description = "Functions to access and search Unicode blocks."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
